--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>git pull,toggle branch,merge conflict</h1>
     <p>This is a advance video</p>
+    <img src="download.jpg" alt="">
 </body>
 </html>
